Actually adding flash smpp code
